added pagination and logger